# DocuScan-webapp

./: .gitignore  app.py  pyproject.toml
static/css/: style.css
static/js/: camera.js  editor.js
templates/: base.html  index.html
utils/: image_processing.py
