[project]
name = "repl-nix-docuscantransform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "opencv-python-headless>=4.10.0.84",
    "numpy",
]

[tool.poetry]
name = "repl-nix-docuscantransform"
version = "0.1.0"
description = "Document Scanner Web Application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
email-validator = ">=2.2.0"
flask = ">=3.0.3"
flask-sqlalchemy = ">=3.1.1"
psycopg2-binary = ">=2.9.10"
opencv-python-headless = ">=4.10.0.84"
numpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
